Valkyrie2.0/Valkyrie2.0/libs/qasm2Parser.cpp

// Generated from qasm2.g4 by ANTLR 4.9.2


#include "qasm2Visitor.h"

#include "qasm2Parser.h"


using namespace antlrcpp;
using namespace antlr4;

qasm2Parser::qasm2Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

qasm2Parser::~qasm2Parser() {
  delete _interpreter;
}

std::string qasm2Parser::getGrammarFileName() const {
  return "qasm2.g4";
}

const std::vector<std::string>& qasm2Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& qasm2Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- MainprogContext ------------------------------------------------------------------

qasm2Parser::MainprogContext::MainprogContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qasm2Parser::VersionContext* qasm2Parser::MainprogContext::version() {
  return getRuleContext<qasm2Parser::VersionContext>(0);
}

std::vector<qasm2Parser::StatementContext *> qasm2Parser::MainprogContext::statement() {
  return getRuleContexts<qasm2Parser::StatementContext>();
}

qasm2Parser::StatementContext* qasm2Parser::MainprogContext::statement(size_t i) {
  return getRuleContext<qasm2Parser::StatementContext>(i);
}


size_t qasm2Parser::MainprogContext::getRuleIndex() const {
  return qasm2Parser::RuleMainprog;
}


antlrcpp::Any qasm2Parser::MainprogContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qasm2Visitor*>(visitor))
    return parserVisitor->visitMainprog(this);
  else
    return visitor->visitChildren(this);
}

qasm2Parser::MainprogContext* qasm2Parser::mainprog() {
  MainprogContext *_localctx = _tracker.createInstance<MainprogContext>(_ctx, getState());
  enterRule(_localctx, 0, qasm2Parser::RuleMainprog);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(30);
    version();
    setState(34);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << qasm2Parser::T__1)
      | (1ULL << qasm2Parser::T__5)
      | (1ULL << qasm2Parser::T__7)
      | (1ULL << qasm2Parser::T__9)
      | (1ULL << qasm2Parser::T__12)
      | (1ULL << qasm2Parser::T__13)
      | (1ULL << qasm2Parser::T__15)
      | (1ULL << qasm2Parser::T__17)
      | (1ULL << qasm2Parser::T__18)
      | (1ULL << qasm2Parser::T__19)
      | (1ULL << qasm2Parser::ID))) != 0)) {
      setState(31);
      statement();
      setState(36);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

qasm2Parser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qasm2Parser::DeclContext* qasm2Parser::StatementContext::decl() {
  return getRuleContext<qasm2Parser::DeclContext>(0);
}

qasm2Parser::GatedeclContext* qasm2Parser::StatementContext::gatedecl() {
  return getRuleContext<qasm2Parser::GatedeclContext>(0);
}

qasm2Parser::GoplistContext* qasm2Parser::StatementContext::goplist() {
  return getRuleContext<qasm2Parser::GoplistContext>(0);
}

tree::TerminalNode* qasm2Parser::StatementContext::ID() {
  return getToken(qasm2Parser::ID, 0);
}

std::vector<qasm2Parser::IdlistContext *> qasm2Parser::StatementContext::idlist() {
  return getRuleContexts<qasm2Parser::IdlistContext>();
}

qasm2Parser::IdlistContext* qasm2Parser::StatementContext::idlist(size_t i) {
  return getRuleContext<qasm2Parser::IdlistContext>(i);
}

qasm2Parser::QopContext* qasm2Parser::StatementContext::qop() {
  return getRuleContext<qasm2Parser::QopContext>(0);
}

tree::TerminalNode* qasm2Parser::StatementContext::INT() {
  return getToken(qasm2Parser::INT, 0);
}

qasm2Parser::AnylistContext* qasm2Parser::StatementContext::anylist() {
  return getRuleContext<qasm2Parser::AnylistContext>(0);
}


size_t qasm2Parser::StatementContext::getRuleIndex() const {
  return qasm2Parser::RuleStatement;
}


antlrcpp::Any qasm2Parser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qasm2Visitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

qasm2Parser::StatementContext* qasm2Parser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, qasm2Parser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(77);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(37);
      decl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(38);
      gatedecl();
      setState(39);
      goplist();
      setState(40);
      match(qasm2Parser::T__0);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(42);
      gatedecl();
      setState(43);
      match(qasm2Parser::T__0);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(45);
      match(qasm2Parser::T__1);
      setState(46);
      match(qasm2Parser::ID);
      setState(47);
      idlist();
      setState(48);
      match(qasm2Parser::T__2);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(50);
      match(qasm2Parser::T__1);
      setState(51);
      match(qasm2Parser::ID);
      setState(52);
      match(qasm2Parser::T__3);
      setState(53);
      match(qasm2Parser::T__4);
      setState(54);
      idlist();
      setState(55);
      match(qasm2Parser::T__2);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(57);
      match(qasm2Parser::T__1);
      setState(58);
      match(qasm2Parser::ID);
      setState(59);
      match(qasm2Parser::T__3);
      setState(60);
      idlist();
      setState(61);
      match(qasm2Parser::T__4);
      setState(62);
      idlist();
      setState(63);
      match(qasm2Parser::T__2);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(65);
      qop();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(66);
      match(qasm2Parser::T__5);
      setState(67);
      match(qasm2Parser::T__3);
      setState(68);
      match(qasm2Parser::ID);
      setState(69);
      match(qasm2Parser::T__6);
      setState(70);
      match(qasm2Parser::INT);
      setState(71);
      match(qasm2Parser::T__4);
      setState(72);
      qop();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(73);
      match(qasm2Parser::T__7);
      setState(74);
      anylist();
      setState(75);
      match(qasm2Parser::T__2);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VersionContext ------------------------------------------------------------------

qasm2Parser::VersionContext::VersionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* qasm2Parser::VersionContext::REAL() {
  return getToken(qasm2Parser::REAL, 0);
}


size_t qasm2Parser::VersionContext::getRuleIndex() const {
  return qasm2Parser::RuleVersion;
}


antlrcpp::Any qasm2Parser::VersionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qasm2Visitor*>(visitor))
    return parserVisitor->visitVersion(this);
  else
    return visitor->visitChildren(this);
}

qasm2Parser::VersionContext* qasm2Parser::version() {
  VersionContext *_localctx = _tracker.createInstance<VersionContext>(_ctx, getState());
  enterRule(_localctx, 4, qasm2Parser::RuleVersion);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(qasm2Parser::T__8);
    setState(80);
    match(qasm2Parser::REAL);
    setState(81);
    match(qasm2Parser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

qasm2Parser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* qasm2Parser::DeclContext::ID() {
  return getToken(qasm2Parser::ID, 0);
}

tree::TerminalNode* qasm2Parser::DeclContext::INT() {
  return getToken(qasm2Parser::INT, 0);
}


size_t qasm2Parser::DeclContext::getRuleIndex() const {
  return qasm2Parser::RuleDecl;
}


antlrcpp::Any qasm2Parser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qasm2Visitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

qasm2Parser::DeclContext* qasm2Parser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 6, qasm2Parser::RuleDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(95);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case qasm2Parser::T__9: {
        enterOuterAlt(_localctx, 1);
        setState(83);
        match(qasm2Parser::T__9);
        setState(84);
        match(qasm2Parser::ID);
        setState(85);
        match(qasm2Parser::T__10);
        setState(86);
        match(qasm2Parser::INT);
        setState(87);
        match(qasm2Parser::T__11);
        setState(88);
        match(qasm2Parser::T__2);
        break;
      }

      case qasm2Parser::T__12: {
        enterOuterAlt(_localctx, 2);
        setState(89);
        match(qasm2Parser::T__12);
        setState(90);
        match(qasm2Parser::ID);
        setState(91);
        match(qasm2Parser::T__10);
        setState(92);
        match(qasm2Parser::INT);
        setState(93);
        match(qasm2Parser::T__11);
        setState(94);
        match(qasm2Parser::T__2);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GatedeclContext ------------------------------------------------------------------

qasm2Parser::GatedeclContext::GatedeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* qasm2Parser::GatedeclContext::ID() {
  return getToken(qasm2Parser::ID, 0);
}

std::vector<qasm2Parser::IdlistContext *> qasm2Parser::GatedeclContext::idlist() {
  return getRuleContexts<qasm2Parser::IdlistContext>();
}

qasm2Parser::IdlistContext* qasm2Parser::GatedeclContext::idlist(size_t i) {
  return getRuleContext<qasm2Parser::IdlistContext>(i);
}


size_t qasm2Parser::GatedeclContext::getRuleIndex() const {
  return qasm2Parser::RuleGatedecl;
}


antlrcpp::Any qasm2Parser::GatedeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qasm2Visitor*>(visitor))
    return parserVisitor->visitGatedecl(this);
  else
    return visitor->visitChildren(this);
}

qasm2Parser::GatedeclContext* qasm2Parser::gatedecl() {
  GatedeclContext *_localctx = _tracker.createInstance<GatedeclContext>(_ctx, getState());
  enterRule(_localctx, 8, qasm2Parser::RuleGatedecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(117);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(97);
      match(qasm2Parser::T__13);
      setState(98);
      match(qasm2Parser::ID);
      setState(99);
      idlist();
      setState(100);
      match(qasm2Parser::T__14);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(102);
      match(qasm2Parser::T__13);
      setState(103);
      match(qasm2Parser::ID);
      setState(104);
      match(qasm2Parser::T__3);
      setState(105);
      match(qasm2Parser::T__4);
      setState(106);
      idlist();
      setState(107);
      match(qasm2Parser::T__14);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(109);
      match(qasm2Parser::T__13);
      setState(110);
      match(qasm2Parser::ID);
      setState(111);
      match(qasm2Parser::T__3);
      setState(112);
      idlist();
      setState(113);
      match(qasm2Parser::T__4);
      setState(114);
      idlist();
      setState(115);
      match(qasm2Parser::T__14);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GoplistContext ------------------------------------------------------------------

qasm2Parser::GoplistContext::GoplistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<qasm2Parser::UopContext *> qasm2Parser::GoplistContext::uop() {
  return getRuleContexts<qasm2Parser::UopContext>();
}

qasm2Parser::UopContext* qasm2Parser::GoplistContext::uop(size_t i) {
  return getRuleContext<qasm2Parser::UopContext>(i);
}

std::vector<qasm2Parser::IdlistContext *> qasm2Parser::GoplistContext::idlist() {
  return getRuleContexts<qasm2Parser::IdlistContext>();
}

qasm2Parser::IdlistContext* qasm2Parser::GoplistContext::idlist(size_t i) {
  return getRuleContext<qasm2Parser::IdlistContext>(i);
}


size_t qasm2Parser::GoplistContext::getRuleIndex() const {
  return qasm2Parser::RuleGoplist;
}


antlrcpp::Any qasm2Parser::GoplistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qasm2Visitor*>(visitor))
    return parserVisitor->visitGoplist(this);
  else
    return visitor->visitChildren(this);
}

qasm2Parser::GoplistContext* qasm2Parser::goplist() {
  GoplistContext *_localctx = _tracker.createInstance<GoplistContext>(_ctx, getState());
  enterRule(_localctx, 10, qasm2Parser::RuleGoplist);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(124); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(124);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case qasm2Parser::T__18:
        case qasm2Parser::T__19:
        case qasm2Parser::ID: {
          setState(119);
          uop();
          break;
        }

        case qasm2Parser::T__7: {
          setState(120);
          match(qasm2Parser::T__7);
          setState(121);
          idlist();
          setState(122);
          match(qasm2Parser::T__2);
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(126); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << qasm2Parser::T__7)
      | (1ULL << qasm2Parser::T__18)
      | (1ULL << qasm2Parser::T__19)
      | (1ULL << qasm2Parser::ID))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QopContext ------------------------------------------------------------------

qasm2Parser::QopContext::QopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qasm2Parser::UopContext* qasm2Parser::QopContext::uop() {
  return getRuleContext<qasm2Parser::UopContext>(0);
}

std::vector<qasm2Parser::ArgumentContext *> qasm2Parser::QopContext::argument() {
  return getRuleContexts<qasm2Parser::ArgumentContext>();
}

qasm2Parser::ArgumentContext* qasm2Parser::QopContext::argument(size_t i) {
  return getRuleContext<qasm2Parser::ArgumentContext>(i);
}


size_t qasm2Parser::QopContext::getRuleIndex() const {
  return qasm2Parser::RuleQop;
}


antlrcpp::Any qasm2Parser::QopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qasm2Visitor*>(visitor))
    return parserVisitor->visitQop(this);
  else
    return visitor->visitChildren(this);
}

qasm2Parser::QopContext* qasm2Parser::qop() {
  QopContext *_localctx = _tracker.createInstance<QopContext>(_ctx, getState());
  enterRule(_localctx, 12, qasm2Parser::RuleQop);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(139);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case qasm2Parser::T__18:
      case qasm2Parser::T__19:
      case qasm2Parser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(128);
        uop();
        break;
      }

      case qasm2Parser::T__15: {
        enterOuterAlt(_localctx, 2);
        setState(129);
        match(qasm2Parser::T__15);
        setState(130);
        argument();
        setState(131);
        match(qasm2Parser::T__16);
        setState(132);
        argument();
        setState(133);
        match(qasm2Parser::T__2);
        break;
      }

      case qasm2Parser::T__17: {
        enterOuterAlt(_localctx, 3);
        setState(135);
        match(qasm2Parser::T__17);
        setState(136);
        argument();
        setState(137);
        match(qasm2Parser::T__2);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UopContext ------------------------------------------------------------------

qasm2Parser::UopContext::UopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qasm2Parser::ExplistContext* qasm2Parser::UopContext::explist() {
  return getRuleContext<qasm2Parser::ExplistContext>(0);
}

std::vector<qasm2Parser::ArgumentContext *> qasm2Parser::UopContext::argument() {
  return getRuleContexts<qasm2Parser::ArgumentContext>();
}

qasm2Parser::ArgumentContext* qasm2Parser::UopContext::argument(size_t i) {
  return getRuleContext<qasm2Parser::ArgumentContext>(i);
}

tree::TerminalNode* qasm2Parser::UopContext::ID() {
  return getToken(qasm2Parser::ID, 0);
}

qasm2Parser::AnylistContext* qasm2Parser::UopContext::anylist() {
  return getRuleContext<qasm2Parser::AnylistContext>(0);
}


size_t qasm2Parser::UopContext::getRuleIndex() const {
  return qasm2Parser::RuleUop;
}


antlrcpp::Any qasm2Parser::UopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qasm2Visitor*>(visitor))
    return parserVisitor->visitUop(this);
  else
    return visitor->visitChildren(this);
}

qasm2Parser::UopContext* qasm2Parser::uop() {
  UopContext *_localctx = _tracker.createInstance<UopContext>(_ctx, getState());
  enterRule(_localctx, 14, qasm2Parser::RuleUop);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(171);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(141);
      match(qasm2Parser::T__18);
      setState(142);
      match(qasm2Parser::T__3);
      setState(143);
      explist();
      setState(144);
      match(qasm2Parser::T__4);
      setState(145);
      argument();
      setState(146);
      match(qasm2Parser::T__2);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(148);
      match(qasm2Parser::T__19);
      setState(149);
      argument();
      setState(150);
      match(qasm2Parser::T__20);
      setState(151);
      argument();
      setState(152);
      match(qasm2Parser::T__2);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(154);
      match(qasm2Parser::ID);
      setState(155);
      anylist();
      setState(156);
      match(qasm2Parser::T__2);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(158);
      match(qasm2Parser::ID);
      setState(159);
      match(qasm2Parser::T__3);
      setState(160);
      match(qasm2Parser::T__4);
      setState(161);
      anylist();
      setState(162);
      match(qasm2Parser::T__2);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(164);
      match(qasm2Parser::ID);
      setState(165);
      match(qasm2Parser::T__3);
      setState(166);
      explist();
      setState(167);
      match(qasm2Parser::T__4);
      setState(168);
      anylist();
      setState(169);
      match(qasm2Parser::T__2);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AnylistContext ------------------------------------------------------------------

qasm2Parser::AnylistContext::AnylistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qasm2Parser::IdlistContext* qasm2Parser::AnylistContext::idlist() {
  return getRuleContext<qasm2Parser::IdlistContext>(0);
}

qasm2Parser::MixedlistContext* qasm2Parser::AnylistContext::mixedlist() {
  return getRuleContext<qasm2Parser::MixedlistContext>(0);
}


size_t qasm2Parser::AnylistContext::getRuleIndex() const {
  return qasm2Parser::RuleAnylist;
}


antlrcpp::Any qasm2Parser::AnylistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qasm2Visitor*>(visitor))
    return parserVisitor->visitAnylist(this);
  else
    return visitor->visitChildren(this);
}

qasm2Parser::AnylistContext* qasm2Parser::anylist() {
  AnylistContext *_localctx = _tracker.createInstance<AnylistContext>(_ctx, getState());
  enterRule(_localctx, 16, qasm2Parser::RuleAnylist);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(175);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(173);
      idlist();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(174);
      mixedlist();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdlistContext ------------------------------------------------------------------

qasm2Parser::IdlistContext::IdlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> qasm2Parser::IdlistContext::ID() {
  return getTokens(qasm2Parser::ID);
}

tree::TerminalNode* qasm2Parser::IdlistContext::ID(size_t i) {
  return getToken(qasm2Parser::ID, i);
}


size_t qasm2Parser::IdlistContext::getRuleIndex() const {
  return qasm2Parser::RuleIdlist;
}


antlrcpp::Any qasm2Parser::IdlistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qasm2Visitor*>(visitor))
    return parserVisitor->visitIdlist(this);
  else
    return visitor->visitChildren(this);
}

qasm2Parser::IdlistContext* qasm2Parser::idlist() {
  IdlistContext *_localctx = _tracker.createInstance<IdlistContext>(_ctx, getState());
  enterRule(_localctx, 18, qasm2Parser::RuleIdlist);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(181);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(177);
        match(qasm2Parser::ID);
        setState(178);
        match(qasm2Parser::T__20); 
      }
      setState(183);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    }
    setState(184);
    match(qasm2Parser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MixedlistContext ------------------------------------------------------------------

qasm2Parser::MixedlistContext::MixedlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> qasm2Parser::MixedlistContext::ID() {
  return getTokens(qasm2Parser::ID);
}

tree::TerminalNode* qasm2Parser::MixedlistContext::ID(size_t i) {
  return getToken(qasm2Parser::ID, i);
}

std::vector<tree::TerminalNode *> qasm2Parser::MixedlistContext::INT() {
  return getTokens(qasm2Parser::INT);
}

tree::TerminalNode* qasm2Parser::MixedlistContext::INT(size_t i) {
  return getToken(qasm2Parser::INT, i);
}


size_t qasm2Parser::MixedlistContext::getRuleIndex() const {
  return qasm2Parser::RuleMixedlist;
}


antlrcpp::Any qasm2Parser::MixedlistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qasm2Visitor*>(visitor))
    return parserVisitor->visitMixedlist(this);
  else
    return visitor->visitChildren(this);
}

qasm2Parser::MixedlistContext* qasm2Parser::mixedlist() {
  MixedlistContext *_localctx = _tracker.createInstance<MixedlistContext>(_ctx, getState());
  enterRule(_localctx, 20, qasm2Parser::RuleMixedlist);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(229);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(193);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(186);
          match(qasm2Parser::ID);
          setState(187);
          match(qasm2Parser::T__10);
          setState(188);
          match(qasm2Parser::INT);
          setState(189);
          match(qasm2Parser::T__11);
          setState(190);
          match(qasm2Parser::T__20); 
        }
        setState(195);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
      }
      setState(196);
      match(qasm2Parser::ID);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(204);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(197);
          match(qasm2Parser::ID);
          setState(198);
          match(qasm2Parser::T__10);
          setState(199);
          match(qasm2Parser::INT);
          setState(200);
          match(qasm2Parser::T__11);
          setState(201);
          match(qasm2Parser::T__20); 
        }
        setState(206);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
      }
      setState(207);
      match(qasm2Parser::ID);
      setState(208);
      match(qasm2Parser::T__10);
      setState(209);
      match(qasm2Parser::INT);
      setState(210);
      match(qasm2Parser::T__11);
      break;
    }
